Fix issue with parsing and saving categories
* Update bdd test
* Add a method to projection to get all categories
* Added endpoint for getting list of categories
* Updated schema to show that a category object if returned with posts (not a string array)
